--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mediaindex.css">
     <script src="https://kit.fontawesome.com/da3a01af99.js" crossorigin="anonymous"></script>
-  <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 </head>
 <body>
     <div class="navbar">
@@ -16,7 +15,7 @@
             <h1 class="logo">Stephanie's.</h1>
             <nav>
                 <ul>
-                  <li><a href="#work">Work</a></li>
+                  <li><a href="#projectts">Work</a></li>
                   <li><a href="#socials">About</a></li>
                   <li><a href="mailto:chimemeokolie@gmail.com">Hit Me Up</a></li>
                 </ul>
@@ -39,12 +38,12 @@
     <!-- About Me -->
         <div class="flex-container">
       <div class="flex-item"> 
-        <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/piky.jpg?raw=true" alt="my-photo" class="my-img" width="100" height="100">
+        <img src="piky.jpg" alt="my-photo" class="my-img" width="100" height="100">
             <h4 class="hh4">My name is Stephanie Okolie<br>
                           I'm a frontend developer from Ibadan Nigeria
                           <p>I started coding months ago on freeCodeCamp<br>
                              where I've basically covered most of the courses.<br>
-                            and I am currently working on some projects.<br>
+                            and I am curriently working on some projects.<br>
                             Its has been great within these few month as <br>
                             I learn software developement.<br>
                         I learn new things everyday!</p>
@@ -53,7 +52,7 @@
                 </div>
                     <div class="flex-item">
                         <div class="flot-item">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/jpeg.jpg?raw=true" alt="my-photo" class="my-img">
+                    <img src="jpeg.jpg" alt="my-photo" class="my-img">
                     <div class="div-box">
                         <div class="text-gra"><strong>A fictional writer and<br>
                             aspiring young lady</strong></div>
@@ -64,7 +63,7 @@
             </div>
         </div>
        <!-- writer-section -->
-       <section class="writer-section" id='work'>
+       <section class="writer-section">
         <h2>Stephanie as a writer</h2>
        <div class="block-container">
     <div class="block-item"> 
@@ -110,7 +109,7 @@
         <div class="second-div-list">
             <div class="project-img">
                 <a href="https://codepen.io/stephanieokolie/full/OJmyWxW" target="_blank">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/css-tricks.jpg?raw=true" alt="">
+                    <img src="css-tricks.jpg" alt="">
             </a>
             <div class="container">
                 <p>A Work Desk</p>
@@ -118,7 +117,7 @@
             </div>
             <div class="project-img">
                 <a href="https://codepen.io/stephanieokolie/full/eYWbWZo" target="_blank">
-                <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/netflix%20clone.jpg?raw=true" alt="ije">
+                <img src="netflix clone.jpg" alt="ije">
                 </a>
                 <div class="container">
                     <p>Netflix Clone</p>
@@ -126,7 +125,7 @@
             </div>
             <div class="project-img">
                 <a href="https://codepen.io/stephanieokolie/full/dyWYMmQ" target="_blank">
-                <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/piggyvestcloneimg.jpg?raw=true" alt="control-z">
+                <img src="piggyvestcloneimg.jpg" alt="control-z">
             </a>
                 <div class="container">
                     <p>Piggyvest Clone</p>
@@ -134,7 +133,7 @@
             </div>
             <div class="project-img">
                 <a href="https://codepen.io/stephanieokolie/full/abZPEKe" target="_blank">
-                <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/A%20Survey%20Formimg.jpg?raw=true" alt="hwarang">
+                <img src="A Survey Formimg.jpg" alt="hwarang">
             </a>
                 <div class="container">
                     <p>A Survey Form</p>
@@ -142,7 +141,7 @@
             </div>
             <div class="project-img">
                 <a href="https://codepen.io/stephanieokolie/full/KKMxezV" target="_blank">
-                <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/a%20tribute%20page%20img.jpg?raw=true" alt="one day">
+                <img src="a tribute page img.jpg" alt="one day">
                 </a>
                 <div class="container">
                     <p>A Tribute Page </p>
@@ -150,7 +149,7 @@
             </div>
                 <div class="project-img">
                     <a target="_blank" href="https://codepen.io/stephanieokolie/full/xxOvRpJ">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/A%20Personal%20Portfolioimg.jpg?raw=true" alt="blood">
+                    <img src="A Personal Portfolioimg.jpg" alt="blood">
                 </a>
                     <div class="container">
                         <p>A Personal Portfolio</p>
@@ -158,7 +157,7 @@
                 </div>
                 <div class="project-img">
                     <a href="https://codepen.io/stephanieokolie/full/YzWgXqW" target="_blank">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/A%20Product%20Landing%20Pageimg.jpg?raw=true" alt="blade series">
+                    <img src="A Product Landing Pageimg.jpg" alt="blade series">
                     </a>
                     <div class="container">
                         <p>A Product Landing Page</p>
@@ -166,7 +165,7 @@
                 </div>
                 <div class="project-img">
                     <a href="https://codepen.io/stephanieokolie/full/PozroOE" target="_blank">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/A%20Technical%20Documentation%20pageimg.jpg?raw=true" alt="blade series">
+                    <img src="A Technical Documentation pageimg.jpg" alt="blade series">
                     </a>
                     <div class="container">
                         <p>A Technical Documentation Page</p>
@@ -174,7 +173,7 @@
                 </div>
                     <div class="project-img">
                         <a href="https://github.com/Chinemereem/twitterclone" target="blank">
-                        <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/twittecloneimg.png?raw=true" alt="twitter clone" height="180">
+                        <img src="twittecloneimg.png" alt="twitter clone" height="180">
                         </a>
                         <div class="container">
                           <p>My twitter homepage Clone</p>
@@ -182,7 +181,7 @@
                 </div>
                 <div class="project-img">
                     <a href="https://codepen.io/stephanieokolie/full/ZEBwpKK" target="blank">
-                    <img src="https://github.com/Chinemereem/Portfolio-page/blob/master/randomquote%20machine.jpg?raw=true" alt="twitter clone" height="180">
+                    <img src="randomquote machine.jpg" alt="twitter clone" height="180">
                     </a>
                     <div class="container">
                       <p>Random Quote Machine</p>
