--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="mediaindex.css">
     <script src="https://kit.fontawesome.com/da3a01af99.js" crossorigin="anonymous"></script>
+    <link href='https://fonts.googleapis.com/css?family=Sofia' rel='stylesheet'>
 </head>
 <body>
     <div class="navbar">
